# generative-art-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.web  LICENSE  README.md  run_build.sh
data/: .gitignore
docs/: cascading-letter-matrix.md  examples.md  figure-of-8.md  green-cycle-clockwise.md  imageproc-drawing.md  rotating-color-wheel.md
src/: draw_tools.rs  main.rs  user.rs  utils.rs
templates/: index.html
