[package]
name = "generative-art-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rand = "0.8.5"
gif = { version="0.12.0", optional=true }
minimp4 = { version="0.1.0", optional=true }
openh264 = { version="0.4.1", optional=true }
js-sys = { version="0.3.64", optional=true }
wasm-bindgen = { version="0.2.87", optional=true }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[features]
not_web=["dep:gif","dep:minimp4","dep:openh264"]
is_web=["dep:js-sys", "dep:wasm-bindgen"]

#is_web=[js-sys,wasm-bindgen]
# [target.'cfg(target_arch = "wasm32")'.dependencies]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageBitmap',
  'ImageData',
  'console',
]